--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-blinker==1.5
-click==8.1.3
-distlib==0.3.6
-filelock==3.8.0
-Flask==2.2.2
-Flask-JWT==0.3.2
-Flask-Mail==0.9.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-platformdirs==2.5.2
-PyJWT==1.4.2
-pymongo==4.2.0
-virtualenv==20.16.3
-Werkzeug==2.2.2
+blinker
+click
+distlib
+filelock
+Flask
+Flask-JWT
+Flask-Mail
+itsdangerous
+Jinja2
+MarkupSafe
+platformdirs
+PyJWT
+pymongo
+virtualenv
+Werkzeug
