--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.5
 certifi==2022.6.15.1
 classes==0.4.1
 click==8.1.3
+dnspython==2.2.1
 Flask==2.2.2
 Flask-Mail==0.9.1
 Flask-PyMongo==2.3.0
